overlapping of div solved

--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&family=Odibee+Sans&family=Roboto+Condensed:wght@300&display=swap');
+
 body{
     margin: 0;
-    font-family: sans-serif;
+    background-image: url('../images/bg.png');
+    background-repeat: no-repeat;
+    background-size: 1519px 800px;
 }
 
 *{
@@ -11,15 +14,6 @@ body{
     margin: 0;
 }
 
-.bgImg{
-    background-color: #585858;
-    background-image: url('../images/bg.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    height: 800px;
-}
 
 /* header section starts */
 
@@ -55,12 +49,14 @@ header{
     position: absolute;
     left: 0px;
     right: 0px;
-    z-index: -1;
+    padding-bottom: 93vh;
+    /* z-index: 2; */
 }
 
-header .fixed{
-    background-color: transparent;
+header .row{
+    background-color: black;
     position: fixed;
+    z-index: 1;
 }
 header .row{
     
@@ -121,7 +117,7 @@ header .navbar ul li a:hover::before{
     left: 0;
 }
 
-/* .book-btn{
+.book-btn{
     background-color: #202133;
     font-family: 'Bebas Neue', cursive;
     font-size: 15px;
@@ -129,12 +125,15 @@ header .navbar ul li a:hover::before{
     color: #efefef;
     border: 2px solid #202133;
     border-radius: 10px;
-} */
+}
+
+.home .container{
+    padding-top: 150px;
+}
 .quote {
     color: #ffffff;
     font-family: 'Orbitron', sans-serif;
     margin-left: 100px;
-    margin-top: 50px;
     font-size: 70px;
 }
 
@@ -149,7 +148,6 @@ header .navbar ul li a:hover::before{
 
 .moon-bg img{
     position: absolute;
-    /* right: 0%; */
     transition: transform 3s ease-in;
 }
 
@@ -160,6 +158,7 @@ header .navbar ul li a:hover::before{
 .astronaut-bg{
     position: absolute;
     right: 10%;
+    z-index: -1;
 }
 
 .astronaut-bg img{
@@ -197,6 +196,8 @@ header .navbar ul li a:hover::before{
     font-size: 30px;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: lighter;
+    margin-bottom: 280px;
+    /* z-index: -1; */
 }
 
 .exploreBtn img{
@@ -209,7 +210,6 @@ header .navbar ul li a:hover::before{
 /* Destination css starts*/
 
 .destination{
-    padding-top: 130vh;
     margin-bottom: 160px;
 }
 .destination .destination-container .section-title{
@@ -219,12 +219,14 @@ header .navbar ul li a:hover::before{
     text-decoration: overline;
     text-decoration-color: #ed1c24;
     margin-left: 160px;
+    margin-bottom: 20px;
 }
 
 .image-container{
     margin-left: 150px;
     display: flex;
     flex-direction: row;
+    z-index: 1;
 }
 
 .image-container figure{
@@ -643,17 +645,11 @@ svg{
 
 /* footer css starts*/
 
-.foooter .footer-container{
-    display: flex;
-    flex-direction: column;
-    margin: 60px;
-
-}
-
 .foooter .row{
     display: flex;
     flex-direction: row;
     margin-left: 430px;
+    padding: 50px 50px;
 }
 
 .foooter .name{
@@ -673,34 +669,9 @@ svg{
     height: 150px;
 }
 
-.foooter .navbar ul{
-    list-style: none;
-    padding: 0;
-    margin-left: 420px;
-}
-.foooter .navbar ul li{
-    display:  inline-block;
-    margin-left: 35px;
-}
-
-.foooter .navbar ul li .home{
-    color: #ed1c24;
-}
-
-.foooter .navbar ul li a{
-    text-decoration: none;
-    line-height: 72px;
-    color: #000000;
-    display: block;
-    font-size: 30px;
-    position: relative;
-    font-family: 'Odibee Sans', cursive;
-    font-weight: 900px;
-}
-
 footer{
    
-    position: fixed;
+    /* position: fixed; */
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;
